--- a/index.html
+++ b/index.html
@@ -91,16 +91,16 @@
             <table id="bmiPicsTable">
                 <tr>
                     <td class="bmiTableElements" id="img1">
-                        <img src="../public_html/pics/thin.jpg" alt="thin"/>
+                        <img src="/public_html/pics/thin.jpg" alt="thin"/>
                     </td>
                     <td class="bmiTableElements" id="img2">
-                        <img src="../public_html/pics/normal.jpg" alt="normal"/>
+                        <img src="/public_html/pics/normal.jpg" alt="normal"/>
                     </td>
                     <td class="bmiTableElements" id="img3">
-                        <img src="../public_html/pics/overweight.jpg" alt="overweight"/>
+                        <img src="/public_html/pics/overweight.jpg" alt="overweight"/>
                     </td>
                     <td class="bmiTableElements" id="img4">
-                        <img src="../public_html/pics/obese.jpg" alt="obese"/>
+                        <img src="/public_html/pics/obese.jpg" alt="obese"/>
                     </td>
                 </tr>
             </table>
